minor updates to various files
* updated about.html
* updated cheese.html
* updated secret page
* updated index.html
* updated inspiration.html
* updated squirrels.html

All very minor updates.

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 
 
 <!DOCTYPE html>
-<html lang = "en">
+<html lang = "en-US">
 <html>
   <head>
     <title>About Me</title>
@@ -49,6 +49,7 @@
         <!-- links -->
         <h2>Links</h2>    <br/>
         <h4><a href="./cheese.html">Random Cheese Facts!</a></h4>
+        <h4><a href="./squirrels.html">Some squirrels.</a></h4>
         <h4><a href="./inspiration.html">If you need some inspiration.</a></h4>
       </div>
     </div>
