--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <li>Blog(ish) side</li>
         <ul>
           <li><a href="./about.html">About Me</a></li>
+          <li><a href="./cheese.html">Cheese Facts</a></li>
           <li><a href="./inspiration.html">Inspiration</a></li>
         </ul>
         <li>Tutorial side</li>
