--- a/squirrels.html
+++ b/squirrels.html
@@ -5,7 +5,7 @@
 
 
 <!DOCTYPE html>
-<html lang = "en">
+<html lang = "en-US">
 <html>
   <head>
     <title>Squirrels</title>
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!-- font awesome icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body style="background-color: #196F3D;">
     <div class="alert alert-info">
