--- a/cheese.html
+++ b/cheese.html
@@ -58,7 +58,7 @@
           <li>The French have a cheese for every day of the year.</li>
           <li>Cheese existed before written language did.</li>
           <li>Every pound of cheese requires ten pounds of milk.</li>
-          <li></li>
+          <li>There are hundreds of types of cheese. <a href="https://cheese.com/alphabetical/" target="_blank">Cheese.com</a> (also linked below) has a very impressive list.</li>
           <li></li>
           <li></li>
           <li></li>
@@ -84,5 +84,10 @@
           <figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Cheddar cheese wheel</figcaption>
       </div>
     </div>
+    <footer style="padding: 10px">
+      <div style="text-align: right;">
+        <p>Updated: 15 DEC 2017</p>
+      </div>
+    </footer>
   </body>
 </html>
