--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
     </div>
     <header>
       <ul class="page_links">
-        <li class="page_links"><a href="./about.html">About Me</a></li>
       </ul>
     </header>
     <h1>Directory</h1>
@@ -48,6 +47,12 @@
           <li><a href="#"><del>Security</del></a></li>
         </ul>
       </ul>
+    <!-- remove the footer positioning if the page scrolls -->
+    <footer style="padding: 10px; position: absolute; right: 0; bottom: 0;">
+      <div style="text-align: right;">
+        <p>Updated: 15 DEC 2017</p>
+      </div>
+    </footer>
   </body>
 </html>
 
