--- a/squirrels.html
+++ b/squirrels.html
@@ -43,5 +43,11 @@
         <img src="./images/squirrels/surprised_squirrel.jpg" alt="Surprised squirrel" width="267" height="200"/>
       </div>
     </div>
+    <!-- remove the footer positioning if the page scrolls -->
+    <footer style="padding: 10px; position: absolute; right: 0; bottom: 0;">
+      <div style="text-align: right;">
+        <p>Updated: 15 DEC 2017</p>
+      </div>
+    </footer>
   </body>
 </html>
