--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
 
         <h2>Interests</h2>
         <h3>TV</h3>
-        <p>I've had a revived interest in TV shows in the past two years or so. One show I'm really into is Game of Thrones (yes, I know, everybody is in to it too). I'm waiting (with bated breath) for the eighth season to come out; but who isn't, right? I also watch Ballers (I'm almost caught up, so no spoilers!). As for non-HBO shows, I watch Burn Notice (the one with Jeffrey Donovan and Gabrielle Anwar) and Life (starring Damian Lewis and Adam Arkin).</p>
+        <p>I've had a revived interest in TV shows in the past two years or so. One show I'm really into is Game of Thrones (yes, I know, everybody is in to it too). I'm waiting (with bated breath) for the eighth season to come out; but who isn't, right? I also watch Ballers (finished the last season last night). As for non-HBO shows, I watch Burn Notice (the one with Jeffrey Donovan and Gabrielle Anwar) and Life (starring Damian Lewis and Adam Arkin).</p>
         <p>I also enjoying going to the theater to watch new movies, but I'm a poor college student so that doesn't happen as often as I'd like. I did go and see <i>Geostorm</i> recently. It was decent. Not quite what I expected, but definitely a good watch. <i>Flatlines</i> was also good. It almost looked like the producers were trying for a scientific horror; so if you're easily scared, stay away. There was a guy in the theater who would scream at every intense part (Seriously, even if it wasn't scary and was just slightly intense, he would jump and yell. It was great.).</p>
         <h3>Exercising</h3>
         <p>I've always had a love for exercising. Since for as long as I can remember, I have loved to get up and work my body. Whether it's hitting the gym, swimming, running, or hiking I love it! I mostly do bodyweight exercises now, because I don't have as much time as I used to.</p>
@@ -53,5 +53,10 @@
         <h4><a href="./inspiration.html">If you need some inspiration.</a></h4>
       </div>
     </div>
+    <footer style="padding: 10px">
+      <div style="text-align: right;">
+        <p>Updated: 15 DEC 2017</p>
+      </div>
+    </footer>
   </body>
 </html>
