--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </ul>
         <li>Tutorial side</li>
         <ul>
-          <li><a href="#"><del>Excel</del></a></li>
+          <li><a href="./tutorials/excel.html">Excel</a></li>
           <li><a href="#"><del>Security</del></a></li>
         </ul>
       </ul>
