--- a/tutorials/excel.html
+++ b/tutorials/excel.html
@@ -1,6 +1,6 @@
 <!-- Snell, Dallin
   -- 09 NOV 2017
-  -- my personal webpage
+  -- Excel tutorial page
 -->
 
 <!DOCTYPE html>
@@ -9,8 +9,8 @@
   <head>
     <style>
     </style>
-    <title></title>
-    <link rel="icon" href="./../images/kali_icon.ico"/>
+    <title>Excel</title>
+    <link rel="icon" href="./../images/cropped_favicon_BTH_icon.ico"/>
     <link rel="stylesheet" type="text/css" href="./../themes.css">
     <script src="./../scripts.js"></script>
     <meta name="author" content="Dallin Snell"/>
@@ -28,6 +28,7 @@
     </div>
     <header>
       <ul class="page_links">
+        <li class="page_links"><a href="./index.html">Home</a></li>
       </ul>
     </header>
   </body>
