--- a/tutorials/excel.html
+++ b/tutorials/excel.html
@@ -22,14 +22,17 @@
     <!-- font awesome icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
-  <body style="padding: 10px;">
+  <body style="background-colod: #196F3D; padding: 10px;">
     <div class="alert alert-info">
       <p><strong>Under construction!</strong> Thank you for your patience!</p>
     </div>
     <header>
       <ul class="page_links">
-        <li class="page_links"><a href="./index.html">Home</a></li>
+        <li class="page_links"><a href="./../index.html">Home</a></li>
       </ul>
     </header>
+    
+    <h1>Test header</h1>
+    <p>This is a test paragraph as well.</p>
   </body>
 </html>
