--- a/tutorials/excel.html
+++ b/tutorials/excel.html
@@ -22,7 +22,7 @@
     <!-- font awesome icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
-  <body style="background-colod: #196F3D; padding: 10px;">
+  <body style="background-color: #196F3D; padding: 10px;">
     <div class="alert alert-info">
       <p><strong>Under construction!</strong> Thank you for your patience!</p>
     </div>
