Updated Excel tutorial
* minor updates to excel.html

--- a/tutorials/excel.html
+++ b/tutorials/excel.html
@@ -22,7 +22,7 @@
     <!-- font awesome icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
-  <body style="background-color: #196F3D; padding: 10px;">
+  <body style="background-color: #196F3D;">
     <div class="alert alert-info">
       <p><strong>Under construction!</strong> Thank you for your patience!</p>
     </div>
@@ -31,8 +31,21 @@
         <li class="page_links"><a href="./../index.html">Home</a></li>
       </ul>
     </header>
-    
-    <h1>Test header</h1>
-    <p>This is a test paragraph as well.</p>
+
+    <div class="container-fluid">
+      <div id="content" class="col-md-6 col-lg-9">
+        <h1>Excel: Quick and Easy</h1>
+        <p>This page contains a lot of what I know about Microsoft Excel. There is so much to do with Excel that it's pretty difficult to put everything I know down, but I'll do my best. There are links along the side that will jump you to specific spots if you know what you're looking for. If not, you can just start reading. Enjoy!</p>
+      </div>
+      <div id="content" class="col-md-6 col-lg-3">
+        <!-- content -->
+      </div>
+    </div>
+    <!-- remove the footer positioning if the page scrolls -->
+    <footer style="padding: 10px; position: absolute; right: 0; bottom: 0;">
+      <div style="text-align: right;">
+        <p>Updated: 15 DEC 2017</p>
+      </div>
+    </footer>
   </body>
 </html>
