--- a/cheese.html
+++ b/cheese.html
@@ -81,7 +81,8 @@
         <!-- for pictures -->
         <figure>
           <img src="./images/cheese/CheddarWheel.jpg" alt="Cheddar Cheese Wheel" width="313" height="313"/>
-          <figcaption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Cheddar cheese wheel</figcaption>
+          <figcaption>&emsp;Cheddar cheese wheel</figcaption>
+        </figure>
       </div>
     </div>
     <footer style="padding: 10px">
