--- a/cheese.html
+++ b/cheese.html
@@ -9,7 +9,7 @@
 <html>
   <head>
     <title>Cheese!</title>
-    <link rel="icon" href="./images/cheese.ico"/>
+    <link rel="icon" href="./images/cheese_icon.ico"/>
     <link rel="stylesheet" type="text/css" href="./themes.css">
     <meta name="author" content="Dallin Snell"/>
     <meta charset="utf-8"/>
