--- a/squirrels.html
+++ b/squirrels.html
@@ -9,7 +9,7 @@
 <html>
   <head>
     <title>Squirrels</title>
-    <link rel="icon" href="./images/squirrel.ico"/>
+    <link rel="icon" href="./images/squirrel_icon.ico"/>
     <link rel="stylesheet" type="text/css" href="./themes.css">
     <meta name="author" content="Dallin Snell"/>
     <meta charset="utf-8"/>
