--- a/tutorials/excel.html
+++ b/tutorials/excel.html
@@ -44,13 +44,14 @@
             <img src="./../images/tutorials/excel/excel-grid.png" alt="Excel grid system"/>
             <figcaption>&emsp;Figure 1--Excel grid</figcaption>
           </figure>
-        </div>
+        </div> <!-- end of basics -->
         <div id="functions">
           <h2>Functions</h2>
-          <p>I'm going to go over some essential functions for working with Excel. I'll start from some of the more simplier ones and progress towards more difficult ones.</p>
+          <p>I'm going to go over some essential functions for working with Excel. I'll start from some of the more simplier ones and progress towards more difficult ones. All functions are preceded by an equal sign ("<i>=</i>"); all the examples I have here will include the equal sign in the code. You also may notice that some examples have the functions in lowercase and others have the function in uppercase. It doesn't matter which way you type it; Excel generally converts it all to uppercase.</p>
+          <!-- function: sum -->
           <div id="function-sum">
             <h3><i>sum</i></h3>
-            <p>The first function is the <i>sum</i> function. The <i>sum</i> function does exactly what it's title implies: it sums a range of values. The function code is as follows: <i>=sum(A3:A4)</i>. The range is specified with the starting cell on the left of the colon and the ending cell on the right side. (<a href="#fig2">See Figure 2.</a>)You can also specify individual cells with a comma (e.g. <i>=sum(A3:A4,A5)</i>). (<a href="#fig3">See Figure 3.</a>) The range (and individual cells, if you've specified them) will light up in different colors as they are selected in the function.</p>
+            <p>The first function is the <i>sum</i> function. The <i>sum</i> function does exactly what it's title implies: it sums a range of values. The function code is as follows: <i>=sum(A3:A4)</i>. The range is specified with the starting cell on the left of the colon and the ending cell on the right side. (<a href="#fig2">See Figure 2.</a>) You can also specify individual cells with a comma (e.g. <i>=sum(A3:A4,A5)</i>). (<a href="#fig3">See Figure 3.</a>) The range (and individual cells, if you've specified them) will light up in different colors as they are selected in the function.</p>
             <figure id="fig2">
               <img src="./../images/tutorials/excel/excel_sum.gif" alt="Excel sum function (with range)"/>
               <figcaption>&emsp;Figure 2--sum function (range)</figcaption>
@@ -60,8 +61,73 @@
               <img src="./../images/tutorials/excel/excel_sum_2.gif" alt="Excel sum function (with range and additional)"/>
               <figcaption>&emsp;Figure 3--sum function (range & additional cell)</figcaption>
             </figure>
-          </div>
-        </div>
+          </div> <!-- end of function sum -->
+          <!-- function: today -->
+          <div id="function-today">
+            <h3><i>today</i></h3>
+            <p>The <i>today</i> function returns today's date as an Excel-formatted date (i.e. really just a number (<a href="#fig4">See Figure 4.</a>) that, if formatted properly, represents a date (<a href="#fig5">See Figure 5.</a>). This function is fairly simply and straightforward. There's nothing fancy, really, that you can do with it; it is really useful when creating longer functions for company payroll sheets, etc. The function code is as follows: <i>=today()</i>.</p>
+            <figure id="fig4">
+              <img src="./../images/tutorials/excel/excel_today_unformatted.png" alt="today-unformatted"/>
+              <figcaption>&emsp;Figure 4--today function (formatting removed)</figcaption>
+            </figure>
+            <br/>
+            <figure id="fig5">
+              <img src="./../images/tutorials/excel/excel_today_formatted.png" alt="today-formatted"/>
+              <figcaption>&emsp;Figure 5--today function (formatting kept)</figcaption>
+            </figure>
+          </div> <!-- end of function today -->
+          <!-- function: average -->
+          <div id="function-average">
+            <h3><i>average</i></h3>
+            <p>Commonly in Excel, one needs to know the average of a set of numbers. One can achieve this without using the average function (e.g. <i>=SUM(A1:A4)/COUNT(A1:A4)</i>), but it can become difficult when you need to change the range or otherwise update the function. Luckily, the developers of Excel built in a function for the average; the code for this function is as follows: <i>=average(A1:A4)</i>. </p>
+            <figure id="fig6">
+              <img src="./../images/tutorials/excel/excel_average.png" alt="average function"/>
+              <figcaption>&emsp;Figure 6--average function</figcaption>
+            </figure>
+          </div> <!-- end of function average -->
+          <!-- function:  -->
+          <div id="function-">
+            <h3><i></i></h3>
+            <p></p>
+            <figure id="fig">
+              <img src="" alt=""/>
+              <figcaption></figcaption>
+            </figure>
+            <figure id="fig">
+              <img src="" alt=""/>
+              <figcaption></figcaption>
+            </figure>
+          </div> <!-- end of function  -->
+          <!-- function:  -->
+          <div id="function-">
+            <h3><i></i></h3>
+            <p></p>
+            <figure id="fig">
+              <img src="" alt=""/>
+              <figcaption></figcaption>
+            </figure>
+          </div> <!-- end of function  -->
+          <!-- function:  -->
+          <div id="function-">
+            <h3><i></i></h3>
+            <p></p>
+            <figure id="fig">
+              <img src="" alt=""/>
+              <figcaption></figcaption>
+            </figure>
+          </div> <!-- end of function  -->
+          <!-- function:  -->
+          <div id="function-">
+            <h3><i></i></h3>
+            <p></p>
+            <figure id="fig">
+              <img src="" alt=""/>
+              <figcaption></figcaption>
+            </figure>
+          </div> <!-- end of function  -->
+        </div> <!-- end of functions -->
+        <div id="formatting">
+        </div> <!-- end of formatting -->
       </div>
       <div id="content" class="col-md-6 col-lg-3">
         <!-- content: links -->
@@ -70,14 +136,39 @@
           <li><a href="#functions">Functions</a></li>
           <ul>
             <li><a href="#function-sum">sum</a></li>
+            <li><a href="#function-today">today</a></li>
+            <li><a href="#function-average">average</a></li>
+            <li><a href="#"><del>max</del></a></li>
+            <li><a href="#"><del>min</del></a></li>
+            <li><a href="#"><del>if</del></del></a></li>
+            <li><a href="#"><del>count</del></a></li>
+            <li><a href="#"></a></li>
           </ul>
+          <li><a href="#"><del>Formatting</del></a></li>
+          <ul>
+            <li><a href="#"><del>Cells</del></a></li>
+            <ul>
+              <li><a href="#"><del>Font</del></a></li> <!-- includes font size -->
+              <li><a href="#"><del>Color</del></a></li>
+              <li><a href="#"><del>Fill</del></a></li>
+              <li><a href="#"><del>Alignment</del></a></li>
+              <li><a href="#"><del>Borders</del></a></li>
+              <li><a href="#"><del>Number Formats</del></a></li>
+            </ul>
+            <li><a href="#"><del>Conditional</del></a></li>
+          </ul>
+          <li><a href="#"><del>Insert/Delete Cells/Rows/Columns</del></a></li>
         </ul>
       </div>
     </div>
 
+    <div class="alert alert-info">
+      <p><strong>Under construction!</strong> Thank you for your patience!</p>
+    </div>
+
     <footer style="padding: 10px;">
       <div style="text-align: right;">
-        <p>Updated: 19 DEC 2017</p>
+        <p><a href="#">Go to top</a>&emsp;Updated: 21 DEC 2017</p>
       </div>
     </footer>
   </body>
@@ -85,9 +176,12 @@
 
 
 <!-- List of figures:
-* Figure 1 - Excel grid system
-* Figure 2 - sum function (with just range)
-* Figure 3 - sum function (with range and additional)
+* Figure 1 - Excel grid system                          {png}
+* Figure 2 - sum function (with just range)             {gif}
+* Figure 3 - sum function (with range and additional)   {gif}
+* Figure 4 - today (date unformatted)                   {png}
+* Figure 5 - today (date formatted)                     {png}
+* Figure 6 - average                                    {png}
 *
 
 
