personal site updated:
* instruments.html created
* instruments.html favicon added
* updated music.html

--- a/music.html
+++ b/music.html
@@ -28,7 +28,7 @@
       <ul class="page_links">
         <li class="page_links"><a href="./index.html">Home</a></li>
         <li class="page_links"><a href="./inspiration.html">Inspiration</a></li>
-        <li class="page_links"><a href="./about.html">About Me</a></li>
+        <li class="page_links"><a href="./instruments.html">Instruments</a></li>
       </ul>
     </header>
     <div class="container-fluid">
@@ -61,6 +61,8 @@
             <li><a href="#bergersen"><del>Thomas Bergersen</del></a></li>
             <li><a href="#phoenix"><del>Nick Phoenix</del></a></li>
             <li><a href="#tsfh"><del>Two Steps From Hell</del></a></li>
+            <li><a href="#shore"><del>Howard Shore</del></a></li>
+            <li><a href="#djawadi"><del>Ramin Djawadi</del></a></li>
           </ul>
         </ul>
         <br/>
@@ -100,16 +102,16 @@
           <!-- Thi'sl -->
           <h4>Thi'sl</h4>
           <img src="http://rapzilla.com/rz/images/thisl-3-eps.jpg" width="308" height="185" alt="Photo of Thi'sl"/>
-          <br/><br/><p><!-- short bio --></p>
+          <br/><br/><p><!-- short bio -->Travis Tremayne Tyler was born on March 17, 1977. </p>
           <p><!-- video introduction --></p>
           <!-- video code -->
           <!-- Thi'sl: social media -->
           <br/><br/>  <p>Thi'sl on social media:</p>
           &emsp;  <!-- indent social media buttons slightly -->
-          <a href="#" class="fa fa-facebook" target="_blank"></a>
-          <a href="#" class="fa fa-twitter" target="_blank"></a>
-          <a href="#" class="fa fa-instagram" target="_blank"></a>
-          <a href="#" class="fa fa-youtube-play" target="_blank"></a>
+          <a href="https://www.facebook.com/iamthisl/?ref=aymt_homepage_panel" class="fa fa-facebook" target="_blank"></a>
+          <a href="https://twitter.com/Thisl" class="fa fa-twitter" target="_blank"></a>
+          <a href="https://www.instagram.com/thisl/" class="fa fa-instagram" target="_blank"></a>
+          <a href="https://www.youtube.com/channel/UChqRQXhfwRHcv2YrGdiSxfw" class="fa fa-youtube-play" target="_blank"></a>
         </div>          <br/><br/><br/>
         <div id="kj52">
           <!-- KJ-52 -->
@@ -246,6 +248,36 @@
           <a href="#" class="fa fa-instagram" target="_blank"></a>
           <a href="#" class="fa fa-youtube-play" target="_blank"></a>
         </div>          <br/><br/><br/>
+        <div id="shore">
+          <!-- Howard Shore -->
+          <h4>Howard Shore</h4>
+          <img src="https://cdn1.thr.com/sites/default/files/2014/11/howard_shore.jpg" width="308" height="" alt="Howard Shore picture"/>
+          <br/><br/><p><!-- short bio --></p>
+          <p><!-- video introduction --></p>
+          <!-- video code -->
+          <!-- Howard Shore: social media -->
+          <br/><br/>  <p>Howard Shore on social media:</p>
+          &emsp;  <!-- indent social media buttons slightly -->
+          <a href="#" class="fa fa-facebook" target="_blank"></a>
+          <a href="#" class="fa fa-twitter" target="_blank"></a>
+          <a href="#" class="fa fa-instagram" target="_blank"></a>
+          <a href="#" class="fa fa-youtube-play" target="_blank"></a>
+        </div>          <br/><br/><br/>
+        <div id="djawadi">
+          <!-- Ramin Djawadi -->
+          <h4>Ramin Djawadi</h4>
+          <img src="https://i.scdn.co/image/7f2676e08576f569de15238efe3f2e3cc84c82b6" width="308" height="" alt="Ramin Djawadi picture"/>
+          <br/><br/><p><!-- short bio --></p>
+          <p><!-- video introduction --></p>
+          <!-- video code -->
+          <!-- Ramin Djawadi: social media -->
+          <br/><br/>  <p>Ramin Djawadi on social media:</p>
+          &emsp;  <!-- indent social media buttons slightly -->
+          <a href="#" class="fa fa-facebook" target="_blank"></a>
+          <a href="#" class="fa fa-twitter" target="_blank"></a>
+          <a href="#" class="fa fa-instagram" target="_blank"></a>
+          <a href="#" class="fa fa-youtube-play" target="_blank"></a>
+        </div>          <br/><br/><br/>
 
       </div>
       <div id="content" class="col-md-6 col-lg-3">
@@ -257,7 +289,7 @@
     </div>
     <footer style="padding: 10px;">
       <div style="text-align: right;">
-        <p><a href="#">Go to top</a>&emsp;Updated: 20 DEC 2017</p>
+        <p><a href="#">Go to top</a>&emsp;Updated: 27 DEC 2017</p>
       </div>
     </footer>
   </body>
